remove commented out code

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="style.css"> -->
-    <title>Document</title>
+    <title>TodoList</title>
     
 </head>
 <body>
@@ -23,14 +22,7 @@
                 <th>task date</th>
                 <th>label</th>
             </tr>
-            <!-- <tr style=" padding :10px; border:2px solid saddlebrown">
-                <td>--------------task title------------------------------------</td>
-            </tr>
-            <tr>
-                <td class="row1">column1 row1</td>
-                <td class="row1">column2 row1</td>
-                <td class="row1">column3 row1</td>
-            </tr>     -->
+
         </table>
 
         <form id="inputform" onsubmit="return false">
